ligolang/tools/lsp/squirrel/test/contracts/bad/garbage.ligo
faodjsfdsklfj ldsfj dsak fj;asdl jfsd;lfd;ls
